--- a/ByteShop-Tienda/ByteShop-Tienda.csproj
+++ b/ByteShop-Tienda/ByteShop-Tienda.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+    <PackageReference Include="QuestPDF" Version="2025.12.4" />
   </ItemGroup>
 
   <ItemGroup>
